# issueTool

./: .gitignore  CLAUDE.md  CLAUDE_SKILL_CONTEXT.md  README.md  config.example.json  gh-issue-input-generator-SKILL.md  pyproject.toml  test-input.json
examples/: sample-input.json
gh_issue_hierarchy/: __init__.py  cli.py  core.py  fingerprint.py  github_client.py  graph.py  interactive.py  state_manager.py  utils.py  validator.py
schemas/: input-schema.json
